[Kyle]Shopping step4 (#68)
* Feat. get slideData using fetch

* Feat. get more-item-list using fetch

* Fix. itembox의 text 한줄로만 고정, Delete. json data

* Feat. render more-button in js

* Feat. 더보기&접기 기능

* Modify. 이름변경 hot-theme -> hot-deal

* Modify util 파일들 util 폴더로 이동

* Fix. 더보기 데이터 수정

* Feat. get hot-deal data and render using fetch

* Add. hot-deal slide event위한 스타일

* Feat. hot-deal slide

* Fix. 잘못된 주석 취소

--- a/public/index.html
+++ b/public/index.html
@@ -86,17 +86,7 @@
           </div>
           <div class="banner-list slide">
             <div class="slide-list__wrapper">
-              <div class="slide-list">
-                <div class="slide-item">
-                  <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" />
-                </div>
-                <div class="slide-item">
-                  <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
-                </div>
-                <div class="slide-item">
-                  <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" />
-                </div>
-              </div>
+              <div class="slide-list"></div>
             </div>
             <div class="slide-event">
               <div class="slide-event__btn">
@@ -111,141 +101,22 @@
             </div>
           </div>
         </div>
-        <ul class="event-item-list">
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-        </ul>
+        <div class="more-container"></div>
       </div>
-
       <div class="banner-more">
-        <div class="more-text-container">
-          <span>더보기</span>
-          <span class="more-index">(1/276건)</span>
-          <span><i class="fas fa-angle-down"></i></span>
-        </div>
+        <div class="more-text-container"></div>
       </div>
-      <div class="hot-theme">
-        <h3 class="hot-theme-title">품절주의! 역대급 핫딜</h3>
-        <ul class="hot-theme-list">
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-        </ul>
+      <div class="hot-deal">
+        <h3 class="hot-deal-title">품절주의! 역대급 핫딜</h3>
+        <div class="hot-deal__container">
+          <ul class="hot-deal-list"></ul>
+        </div>
+        <div class="slide-event">
+          <div class="slide-event__btn">
+            <div class="btn-prev" tabindex="-1"><i class="fas fa-chevron-left"></i></div>
+            <div class="btn-next" tabindex="-1"><i class="fas fa-chevron-right"></i></div>
+          </div>
+        </div>
       </div>
     </main>
     <script src="src/js/main.js"></script>
