--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/c3d44d5c03.js" crossorigin="anonymous"></script>
     <script src="src/main.js" defer></script>
+    <script src="src/carousel.js" defer></script>
     <title>fe-w3-shopping</title>
 </head>
 <body>
@@ -54,20 +55,34 @@
     <div class="main-banner">
         <div class="main-banner__static">
             <a href="#" class="static__link">
-
+                <img src="images/static1.png" alt="" class="static__img1">
             </a>
         </div>
         <div class="main-banner__slide">
-            <a href="#" class="slide__link1">
-
-            </a>
-            <a href="#" class="slide__link2">
-
-            </a>
-            <a href="#" class="slide__link3">
-
-            </a>
-
+            <div class="slide__right">
+                <i class="fas fa-chevron-right"></i>
+            </div>
+            <div class="slide__left">
+                <i class="fas fa-chevron-left"></i>
+            </div>
+            <!-- <div class="slide__view-box"></div> -->
+            <ul class="slide-bundle">
+                <li class="slide-list">
+                    <a href="#" class="slide__link1">
+                        <img src="images/slide1.png" alt="" class="slide__img1">
+                    </a>
+                </li>
+                <li class="slide-list">
+                    <a href="#" class="slide__link2">
+                        <img src="images/slide2.png" alt="" class="slide__img2">
+                    </a>
+                </li>
+                <li class="slide-list">
+                    <a href="#" class="slide__link3">
+                        <img src="images/slide3.png" alt="" class="slide__img3">
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
     <div class="sub-menu">
@@ -164,9 +179,5 @@
             </ul>
         </div>
     </div>
-    <form action="/email_post" method="post">
-        email: <input type="text" name="email"><br/>
-        <input type="submit">
-    </form>
 </body>
 </html>
