[CLASS] class로 만들어보기

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="쇼핑하우 by kakaocommerce는 대한민국 온라인 쇼핑몰들의 상품 정보를 모두 모아 한번에 가격비교가 가능한, 최저가 가격비교 서비스 입니다." />
     <title>쇼핑라쿤 by raccooncommerce</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
-    <link rel="stylesheet" type="text/css" href="./style.scss" />
+    <link rel="stylesheet" type="text/css" href="/style.scss" />
     <!-- <link rel="stylesheet" type="text/css" href="stylesheets/style.css" /> -->
   </head>
   <body>
@@ -190,7 +190,7 @@
                 <div id="mall__event--slide">
                   <div class="slide" id="mallEventSlide">
                     <div class="panel" aria-hidden="true">
-                      <ul class="list--item">
+                      <div class="list--item">
                         <li class="first goods">
                           <a href="/event/detail/53926/prodid:H11353503109" class="link--product"
                             ><span class="info--thumb"
@@ -242,7 +242,7 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                        <li class="last goods">
+                        <li class="goods">
                           <a href="/event/detail/53972/prodid:S9262487998" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -255,11 +255,8 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                      </ul>
-                    </div>
-                    <div class="panel" aria-hidden="false">
-                      <ul class="list--item">
-                        <li class="first goods">
+
+                        <li class="goods">
                           <a href="/event/detail/53944/prodid:W11457546690" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -310,7 +307,7 @@
                             ><strong class="info--title">3만원 미만 화상캠</strong><span class="info--txt">언택트 시대 필수품! 화상 웹캠</span><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                        <li class="last goods">
+                        <li class="goods">
                           <a href="/event/detail/53947/prodid:U12033001670" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -323,11 +320,8 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                      </ul>
-                    </div>
-                    <div class="panel" aria-hidden="true">
-                      <ul class="list--item">
-                        <li class="first goods">
+
+                        <li class="goods">
                           <a href="/event/detail/53936/prodid:S10507178682" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -379,7 +373,7 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                        <li class="last goods">
+                        <li class="goods">
                           <a href="/event/detail/53961/prodid:P9810509204" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -392,7 +386,7 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                      </ul>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -402,151 +396,7 @@
             </div>
             <div id="hot-deal__wrapper">
               <div class="section--tab section--hot-deal">
-                <div class="title__hot-deal"><h3 class="title--txt">품절주의! 역대급 핫딜</h3></div>
-                <div class="contents--item">
-                  <ul class="list--item _GL">
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1806557&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=0&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210219142750024_631820" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">달달한데 양배추라고?</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">8,500<span class="txt--unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent">50<span class="txt--unit">%</span></span></span
-                          ><span class="screen-out">정가</span><span class="txt--price">17,000<span class="screen-out">원</span></span></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1797357&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=1&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210201103353925_295106" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">요시카와 올스텐 편수냄비</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">12,710<span class="txt--unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent">34<span class="txt--unit">%</span></span></span
-                          ><span class="screen-out">정가</span><span class="txt--price">19,330<span class="screen-out">원</span></span></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1801963&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=2&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210210131735063_589221" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">에스콰이아 가방76%OFF</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">32,900<span class="txt--unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent">76<span class="txt--unit">%</span></span></span
-                          ><span class="screen-out">정가</span><span class="txt--price">139,000<span class="screen-out">원</span></span></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1806910&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=3&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210219134551031_417927" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">곪은자국+흔적 삭제~스팟!</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">11,000<span class="txt--unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent">71<span class="txt--unit">%</span></span></span
-                          ><span class="screen-out">정가</span><span class="txt--price">38,000<span class="screen-out">원</span></span></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1806327&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=4&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210222111017465_413675" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">BBQ 황금올리브 특가!</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">19,000<span class="txt--unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent price--hot-deal">핫딜가</span></span
-                          ></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1798638&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=5&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210204105546531_600709" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">못하는게 없어~멀티팟!</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">19,900<span class="txt--unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent">49<span class="txt--unit">%</span></span></span
-                          ><span class="screen-out">정가</span><span class="txt--price">39,400<span class="screen-out">원</span></span></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1806690&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=6&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210222152446616_859169" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">미친구성 커피10+10+7!</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">3,900<span class="txt--unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent">50<span class="txt--unit">%</span></span></span
-                          ><span class="screen-out">정가</span><span class="txt--price">7,800<span class="screen-out">원</span></span></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1805280&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=7&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210218100920322_622167" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">국물요리에 톡톡!뿌리세요</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">9,900<span class="txt_unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent price--hot-deal">핫딜가</span></span
-                          ></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1806320&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=8&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210222110701931_276691" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">볼륨확~살려주는 뿌리집게</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">8,900<span class="txt_unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent">26<span class="txt_unit">%</span></span></span
-                          ><span class="screen-out">정가</span><span class="txt--price">12,000<span class="screen-out">원</span></span></span
-                        ></a
-                      >
-                    </li>
-                    <li class="_GI_">
-                      <a
-                        href="http://ammonia.daum.net/cptclick?contentseq=1806850&amp;puid=103200091028191100&amp;pagenum=1&amp;impprodnum=9&amp;contentnum=1&amp;positionseq=41603&amp;detailpositionseq=41584&amp;linktype=a2"
-                        class="link--product _GC_"
-                        ><span class="hot-deal--thumb"><img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210222112231138_709243" class="image-group" alt="" /></span
-                        ><span class="screen-out">제품명</span><strong class="info--title">귀찮은 장난감정리 바스켓</strong
-                        ><span class="detail--price"
-                          ><span class="info--discount"
-                            ><span class="screen-out">할인가</span><span class="txt--discount">11,900<span class="txt--unit">원</span></span
-                            ><span class="screen-out">할인율</span><span class="txt--percent price--hot-deal">핫딜가</span></span
-                          ></span
-                        ></a
-                      >
-                    </li>
-                  </ul>
-                </div>
+                <!-- hot-deal-lists -->
                 <div class="more-item__container">
                   <button class="more-item__button">
                     <span>더보기(5/10)</span>
@@ -976,6 +826,6 @@
         <a href="#top" class="btn_follow _GC_"><span class="ico_home ico_follow">TOP</span></a>
       </footer>
     </div>
-    <script src="main.js" type="module"></script>
+    <script src="/main.js" type="module"></script>
   </body>
 </html>
