--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -75,19 +75,17 @@
                 <div class="slide slide_list"></div>
               </div>
               <!-- 페이지 넘기는 버튼, 페이지네이션 -->
-              <div class="paging_comm">
-                <button class="btn_slide btn_prev"><i class="fas fa-chevron-left"></i></button>
+              <div class="paging_comm buttons_pagination">
+                <button class="btn_slide btn_prev"><i class="btn_prev fas fa-chevron-left"></i></button>
                 <span class="inner_paging slide_pagination"></span>
-                <button class="btn_slide btn_next"><i class="fas fa-chevron-right"></i></button>
+                <button class="btn_slide btn_next"><i class="btn_next fas fa-chevron-right"></i></button>
               </div>
             </div>
           </div>
-          <!-- 캐러셀 5개 아이템 -->
+          <!-- 더보기 5개 아이템 -->
           <div id="mallEventList" class="top__event-list">
             <div id="mallEventListSlide" class="event-list__slide">
               <div id="mallEventSlide" class="slide"></div>
-              <!-- <button class="btn_g btn_prev"><i class="fas fa-chevron-left"></i></button>
-              <button class="btn_g btn_next"><i class="fas fa-chevron-right"></i></button> -->
             </div>
           </div>
           <button id="mallEventList_more">더보기</button>
@@ -98,12 +96,13 @@
             <div class="title_info">
               <h3>품절주의! 역대급 핫딜</h3>
             </div>
+            <!-- 롱클릭 캐러셀 -->
             <div class="hotDeal__container">
               <div class="content_hotDeal"></div>
             </div>
             <div class="buttons_hotDeal">
-              <button class="btn_hotDeal btn_prev"><i class="fas fa-chevron-left"></i></button>
-              <button class="btn_hotDeal btn_next"><i class="fas fa-chevron-right"></i></button>
+              <button class="btn_hotDeal btn_prev"><i class="btn_prev fas fa-chevron-left"></i></button>
+              <button class="btn_hotDeal btn_next"><i class="btn_next fas fa-chevron-right"></i></button>
             </div>
           </div>
         </article>
