--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
             <div class="slide__left">
                 <i class="fas fa-chevron-left"></i>
             </div>
-            <!-- <div class="slide__view-box"></div> -->
+            <div class="slide__view-box"></div>
             <ul class="slide-bundle">
                 <li class="slide-list">
                     <a href="#" class="slide__link1">
