feat: 이미지 슬라이드 하단 점선모양 mouse over 이벤트 구현

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,11 @@
             <div class="slide__left">
                 <i class="fas fa-chevron-left"></i>
             </div>
-            <div class="slide__view-box"></div>
+            <div class="slide__under-bundle">
+                <div class="slide__under-btn1" data-key="list1"></div>
+                <div class="slide__under-btn2" data-key="list2"></div>
+                <div class="slide__under-btn3" data-key="list3"></div>
+            </div>
             <ul class="slide-bundle">
                 <li class="slide-list">
                     <a href="#" class="slide__link1">
