[SCSS] 박스 한칸씩 움직을 수 있도록 CSS 변경

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -190,7 +190,7 @@
                 <div id="mall__event--slide">
                   <div class="slide" id="mallEventSlide">
                     <div class="panel" aria-hidden="true">
-                      <div class="list--item">
+                      <ul class="list--item">
                         <li class="first goods">
                           <a href="/event/detail/53926/prodid:H11353503109" class="link--product"
                             ><span class="info--thumb"
@@ -242,7 +242,7 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                        <li class="goods">
+                        <li class="last goods">
                           <a href="/event/detail/53972/prodid:S9262487998" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -255,8 +255,11 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-
-                        <li class="goods">
+                      </ul>
+                    </div>
+                    <div class="panel" aria-hidden="false">
+                      <ul class="list--item">
+                        <li class="first goods">
                           <a href="/event/detail/53944/prodid:W11457546690" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -307,7 +310,7 @@
                             ><strong class="info--title">3만원 미만 화상캠</strong><span class="info--txt">언택트 시대 필수품! 화상 웹캠</span><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                        <li class="goods">
+                        <li class="last goods">
                           <a href="/event/detail/53947/prodid:U12033001670" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -320,8 +323,11 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-
-                        <li class="goods">
+                      </ul>
+                    </div>
+                    <div class="panel" aria-hidden="true">
+                      <ul class="list--item">
+                        <li class="first goods">
                           <a href="/event/detail/53936/prodid:S10507178682" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -373,7 +379,7 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                        <li class="goods">
+                        <li class="last goods">
                           <a href="/event/detail/53961/prodid:P9810509204" class="link--product"
                             ><span class="info--thumb"
                               ><img
@@ -386,7 +392,7 @@
                             ><span class="ico--background2 ico--theme">테마</span></a
                           >
                         </li>
-                      </div>
+                      </ul>
                     </div>
                   </div>
                 </div>
