--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -189,211 +189,7 @@
               <div id="mallEventList" class="mall__event contents--item contents--top">
                 <div id="mall__event--slide">
                   <div class="slide" id="mallEventSlide">
-                    <div class="panel" aria-hidden="true">
-                      <ul class="list--item">
-                        <li class="first goods">
-                          <a href="/event/detail/53926/prodid:H11353503109" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="imgage--top"
-                                alt="바비브라운 브랜드전" /></span
-                            ><strong class="info--title">바비브라운 브랜드전</strong><span class="info--txt">완벽한 메이크업을 위한 뷰티템</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53922/prodid:H11823491111" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11823491111.jpg%3Fut%3D20210106074230&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="imgage--top"
-                                alt="클래식한 분위기, 라코스테" /></span
-                            ><strong class="info--title">클래식한 분위기, 라코스테</strong><span class="info--txt">남녀공용 라코스테 가디건 한눈에 모아보기</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53969/prodid:Q11481857807" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FQ11481857807.jpg%3Fut%3D20201210220119&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="imgage--top"
-                                alt="다리까지 포근한 롱 후리스" /></span
-                            ><strong class="info--title">다리까지 포근한 롱 후리스</strong><span class="info--txt">꽃샘추위 대비 필수템</span><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53935/prodid:F11929626306" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FF11929626306.jpg%3Fut%3D20210114041340&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="imgage--top"
-                                alt="안전을 생각한다면, 창문 잠금장치" /></span
-                            ><strong class="info--title">안전을 생각한다면, 창문 잠금장치</strong><span class="info--txt">침입은 물론 낙하사고 예방해요</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="last goods">
-                          <a href="/event/detail/53972/prodid:S9262487998" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FS9262487998.jpg%3Fut%3D20210124081556&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="imgage--top"
-                                alt="고발색 명품 블러셔 모음" /></span
-                            ><strong class="info--title">고발색 명품 블러셔 모음</strong><span class="info--txt">두 뺨을 화사하게 물들여요</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="panel" aria-hidden="false">
-                      <ul class="list--item">
-                        <li class="first goods">
-                          <a href="/event/detail/53944/prodid:W11457546690" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FW11457546690.jpg%3Fut%3D20201209045533&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="퇴근 후 즐기는 홈스파 #배스솔트" /></span
-                            ><strong class="info--title">퇴근 후 즐기는 홈스파 #배스솔트</strong><span class="info--txt">바쁜 하루의 마무리를 개운하게</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53941/prodid:N10314846256" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FN10314846256.jpg%3Fut%3D20200828103519&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="매력적인 포인트를 주는 실버링" /></span
-                            ><strong class="info--title">매력적인 포인트를 주는 실버링</strong><span class="info--txt">매끄럽고 세련된 디자인</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53938/prodid:I7549170499" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FI7549170499.jpg%3Fut%3D20191015114917&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="언제 입어도 멋스러운 헤링본 자켓" /></span
-                            ><strong class="info--title">언제 입어도 멋스러운 헤링본 자켓</strong><span class="info--txt">유행을 타지 않는 간절기 필수템</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53951/prodid:W10820502125" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FW10820502125.jpg%3Fut%3D20201018174348&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="3만원 미만 화상캠" /></span
-                            ><strong class="info--title">3만원 미만 화상캠</strong><span class="info--txt">언택트 시대 필수품! 화상 웹캠</span><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="last goods">
-                          <a href="/event/detail/53947/prodid:U12033001670" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="지금은 신품종 전성시대" /></span
-                            ><strong class="info--title">지금은 신품종 전성시대</strong><span class="info--txt">늘 먹던 과일 대신 조금 색다르게 맛봐요!</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="panel" aria-hidden="true">
-                      <ul class="list--item">
-                        <li class="first goods">
-                          <a href="/event/detail/53936/prodid:S10507178682" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FS10507178682.jpg%3Fut%3D20200914191643&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="창의력 키워주는 발도르프 교구" /></span
-                            ><strong class="info--title">창의력 키워주는 발도르프 교구</strong><span class="info--txt">놀이로 시작하는 창의력 교육</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53954/prodid:T9984025323" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FT9984025323.jpg%3Fut%3D20200721063601&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="새 신을 신고 가볍게 뛰어보자" /></span
-                            ><strong class="info--title">새 신을 신고 가볍게 뛰어보자</strong><span class="info--txt">패셔니스타 만들어줄 유아 스니커즈</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53937/prodid:V10412722224" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FV10412722224.jpg%3Fut%3D20200904020925&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="단정하지만 우아한 스타일, 르메르" /></span
-                            ><strong class="info--title">단정하지만 우아한 스타일, 르메르</strong><span class="info--txt">디렉터 크리스토퍼 르메르의 컬렉션</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="goods">
-                          <a href="/event/detail/53939/prodid:F10881341690" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FF10881341690.jpg%3Fut%3D20201024101305&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="도시적인 미니멀 스타일 킨더살몬" /></span
-                            ><strong class="info--title">도시적인 미니멀 스타일 킨더살몬</strong><span class="info--txt">깔끔한 데일리룩을 위한 브랜드</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                        <li class="last goods">
-                          <a href="/event/detail/53961/prodid:P9810509204" class="link--product"
-                            ><span class="info--thumb"
-                              ><img
-                                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP9810509204.jpg%3Fut%3D20200702012320&amp;scode=talkgift"
-                                width="200"
-                                height="200"
-                                class="image--top"
-                                alt="영롱하게 빛나는 자개 보석함" /></span
-                            ><strong class="info--title">영롱하게 빛나는 자개 보석함</strong><span class="info--txt">그냥 두기만 해도 아름답게 빛나죠</span
-                            ><span class="ico--background2 ico--theme">테마</span></a
-                          >
-                        </li>
-                      </ul>
-                    </div>
+                    <!-- mall-event-panel -->
                   </div>
                 </div>
                 <button type="button" class="button-group button--prev" title="이전"><span class="ico--home">이전</span></button
