--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -13,7 +13,10 @@
       <section class="header__head">
         <div class="head__logo">
           <a href="/">
-            <img src="https://search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw.png" alt="쇼핑하우 by kakaocommerce" />
+            <img
+              src="https://search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw.png"
+              alt="쇼핑하우 by kakaocommerce"
+            />
           </a>
         </div>
         <div class="head__searchBar">
@@ -644,11 +647,13 @@
           (평일 10:00 - 18:30)
         </p>
         <p class="text_caution">
-          (주)카카오커머스는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 주문, 배송 및 환불 등과 관련한 의무와 책임은 각 판매자에게 있습니다.
+          (주)카카오커머스는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 주문, 배송 및 환불 등과 관련한 의무와 책임은 각
+          판매자에게 있습니다.
           <br />
           최종 상품 정보는 구매 전 판매처에서 반드시 확인해주세요.
           <br />
-          각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인 후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기 바랍니다.
+          각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인 후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기
+          바랍니다.
         </p>
         <small class="text_copyright">
           Copyright ©
