--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -115,8 +115,8 @@
             <h3 class="title_home">쇼핑 급상승 키워드</h3>
             <!-- <span class="txt_info"></span> -->
           </div>
-          <div class="content_item">
-            <ul class="list_item">
+          <div class="content_item content_keyword">
+            <!-- <ul class="list_item">
               <li class="_GI_">
                 <strong class="title_rank">
                   <a href="">키워드 제목</a>
@@ -247,7 +247,7 @@
                   </span>
                 </a>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </article>
         <article class="article__how">
