--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -114,10 +114,9 @@
           <div class="title_info">
             <h3 class="title_home">쇼핑 급상승 키워드</h3>
           </div>
-          <div class="content_item content_keyword">
-          </div>
+          <div class="content_item content_keyword"></div>
         </article>
-        
+
         <article class="article__how">
           <div class="title_info">
             <h3 class="title_home">이 상품 어때요?</h3>
@@ -125,347 +124,23 @@
           <div class="content_item">
             <div class="item_how">
               <strong class="title_sub">비슷한 관심사의 사람들이 많이 본 상품</strong>
-              <ul class="relate_wrap list_item">
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">컴퓨터</strong>
-                    <span class="text_description">
-                      <span class="num_price">2,000,000</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">컴퓨터</strong>
-                    <span class="text_description">
-                      <span class="num_price">2,000,000</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">컴퓨터</strong>
-                    <span class="text_description">
-                      <span class="num_price">2,000,000</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">컴퓨터</strong>
-                    <span class="text_description">
-                      <span class="num_price">2,000,000</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-              </ul>
+              <div class="how__relate"></div>
             </div>
             <div class="item_how">
               <strong class="title_sub">같은 카테고리 인기상품</strong>
-              <ul class="category_wrap list_item">
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-              </ul>
-              <a href="" class="link_view"></a>
+              <div class="how__same"></div>
+              <!-- <a href="" class="link_view"></a> -->
             </div>
           </div>
         </article>
       </section>
+
       <section class="main__etc">
         <article class="etc__partner">
           <h3 class="title_home">쇼핑하우 파트너</h3>
           <div class="section_etc">
-            <div class="cont_partner">
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <button class="btn_home"><i class="fas fa-plus"></i></button>
-            </div>
+            <div class="cont_partner"></div>
+            <button class="btn_home"><i class="fas fa-plus"></i></button>
           </div>
           <a href="" class="link_all">전체보기<i class="fas fa-chevron-right"></i></a>
         </article>
