feat: 고정이미지 json 변경

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/c3d44d5c03.js" crossorigin="anonymous"></script>
-    <script src="src/main.js" defer></script>
-    <script src="src/carousel.js" defer></script>
+    <script type="module" src="src/main.js" defer></script>
+    <script type="module" src="src/getImg.js" defer></script>
+    <script type="module" src="src/carousel.js" defer></script>
     <title>fe-w3-shopping</title>
 </head>
 <body>
@@ -53,9 +54,9 @@
     </header>
     <div class="main-banner">
         <div class="main-banner__static">
-            <a href="#" class="static__link">
+            <!-- <a href="#" class="static__link">
                 <img src="images/static1.png" alt="" class="static__img1">
-            </a>
+            </a> -->
         </div>
         <div class="main-banner__slide">
             <div class="slide__right">
