fix: 슬라이드 이미지 json 받기 insertbefore 인자값 오류 해결

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                 <div class="slide__under-btn3" data-key="list3"></div>
             </div>
             <ul class="slide-bundle">
-                <li class="slide-list">
+                <!-- <li class="slide-list">
                     <a href="#" class="slide__link1">
                         <img src="images/slide1.png" alt="" class="slide__img1">
                     </a>
@@ -85,7 +85,7 @@
                     <a href="#" class="slide__link3">
                         <img src="images/slide3.png" alt="" class="slide__img3">
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
