--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -201,7 +201,7 @@
                 <!-- hot-deal-lists -->
                 <div class="more-item__container">
                   <button class="more-item__button">
-                    <span>더보기(5/10)</span>
+                    <!-- 더보기 span -->
                   </button>
                 </div>
               </div>
